--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -2,12 +2,12 @@
 layout: page
 ---
 
-{{ content }}
+<!-- {{ content }}
 
 {% assign posts = paginator.posts | default: site.posts %}
 
 <!-- role="list" needed so that `list-style: none` in Safari doesn't remove the list semantics -->
-<ul class="posts-list list-unstyled" role="list">
+<!-- <ul class="posts-list list-unstyled" role="list">
   {% for post in posts %}
   <li class="post-preview">
     <article>
@@ -80,9 +80,9 @@ layout: page
 
       {% if site.feed_show_tags != false and post.tags.size > 0 %}
       <div class="blog-tags">
-        <span>Tags:</span>
+        <span>Tags:</span> -->
         <!-- role="list" needed so that `list-style: none` in Safari doesn't remove the list semantics -->
-        <ul class="d-inline list-inline" role="list">
+        <!-- <ul class="d-inline list-inline" role="list">
           {% for tag in post.tags %}
           <li class="list-inline-item">
             <a href="{{ '/tags' | absolute_url }}#{{- tag -}}">{{- tag -}}</a>
@@ -95,7 +95,7 @@ layout: page
     </article>
   </li>
   {% endfor %}
-</ul>
+</ul> -->
 
 {% if paginator.total_pages > 1 %}
 <ul class="pagination main-pager">
@@ -110,4 +110,4 @@ layout: page
   </li>
   {% endif %}
 </ul>
-{% endif %}
+{% endif %} -->
