--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -101,14 +101,11 @@ layout: page
 <html>
 <body>
 
-<h1>The a download attribute</h1>
-
-<p>Click on the image to download it:<p>
-<a href="./assets/Resume_2023.pdf" download="Resume">Download link</a>
-  <img src="/assets/img/hello_world.jpeg" width="104" height="142">
+<center>
+<a href="./assets/Resume_2023.pdf" download="Resume">Resume</a>
+  <img src="/assets/img/download.png" width="50" height="25">
 </a>
-
-<p><b>Note:</b> The download attribute is not supported in IE or Edge (prior version 18), or in Safari (prior version 10.1).</p>
+</center>
 
 </body>
 </html>
