--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -100,10 +100,13 @@ layout: page
 <!DOCTYPE html>
 <html>
 <body>
+<p>
 
+
+</p>
 <center>
 <a href="./assets/Resume_2023.pdf" download="Resume">Resume</a>
-  <img src="/assets/img/download.png" width="50" height="25">
+  <img src="/assets/img/download-pdf.png" width="25" height="50">
 </a>
 </center>
 
