--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -103,10 +103,11 @@ layout: page
 <p>
 
 
+
 </p>
 <center>
 <a href="./assets/Resume_2023.pdf" download="Resume">Resume</a>
-  <img src="/assets/img/download-pdf.png" width="25" height="30">
+  <img src="/assets/img/download.png" width="30" height="30">
 </a>
 </center>
 
