--- a/_includes/social-networks-links.html
+++ b/_includes/social-networks-links.html
@@ -159,6 +159,18 @@
   </li>
   {%- endif -%}
 
+  {%- if network[0] == "download" -%}
+  <li class="list-inline-item">
+    <a href="./assets/Resume_2023" title="Download File">
+      <span class="fa-stack fa-lg" aria-hidden="true">
+        <i class="fas fa-circle fa-stack-2x"></i>
+        <i class="fas fa-download fa-stack-1x fa-inverse"></i>
+      </span>
+      <span class="sr-only">Download File</span>
+    </a>
+  </li>
+{%- endif -%}
+
   {%- if network[0] == "instagram" -%}
   <li class="list-inline-item">
     <a href="https://www.instagram.com/{{ network[1] }}" title="Instagram">
