Download Resume Icon

--- a/_includes/social-networks-links.html
+++ b/_includes/social-networks-links.html
@@ -161,12 +161,12 @@
 
   {%- if network[0] == "download" -%}
   <li class="list-inline-item">
-    <a href="./assets/Resume_2023" title="Download File">
+    <a href="./assets/Resume_2023.pdf" download="Download Resume">
       <span class="fa-stack fa-lg" aria-hidden="true">
         <i class="fas fa-circle fa-stack-2x"></i>
         <i class="fas fa-download fa-stack-1x fa-inverse"></i>
       </span>
-      <span class="sr-only">Download File</span>
+      <span class="sr-only">Download Resume</span>
     </a>
   </li>
 {%- endif -%}
