Download Resume Icon

--- a/_includes/social-networks-links.html
+++ b/_includes/social-networks-links.html
@@ -161,7 +161,7 @@
 
   {%- if network[0] == "download" -%}
   <li class="list-inline-item">
-    <a href="./assets/Resume_2023.pdf" title= "Download Resume" download="Download Resume">
+    <a href="./assets/Resume_2023.pdf" title= "Resume" download="Download Resume">
       <span class="fa-stack fa-lg" aria-hidden="true">
         <i class="fas fa-circle fa-stack-2x"></i>
         <i class="fas fa-download fa-stack-1x fa-inverse"></i>
